# BookofPraise

./: .gitignore  Cargo.toml  build.rs  form.py  index.py  package-command.txt  photo.py  resize.py  run.bat  run.sh
.github/: ci_render.py
.github/workflows/: build.yml  create-release.yml  pages.yml  release.yml  render-and-cleanup.yml
doc/: userguide.adoc
doc/images/: capture.sh
installer/: installer.iss
lilypond/hymn1/: composer.txt  lyrics_1.ly  notes.ly  song.yaml
lilypond/hymn10/: composer.txt  lyrics_1.ly  lyrics_2.ly  notes.ly  song.yaml
lilypond/hymn11/: composer.txt  lyrics_1.ly  lyrics_2.ly  lyrics_3.ly  lyrics_4.ly  lyrics_5.ly  lyrics_6.ly  lyrics_7.ly  lyrics_8.ly  lyrics_9.ly  notes.ly  song.yaml
lilypond/hymn12/: lyrics_1.ly  lyrics_10.ly  lyrics_11.ly  lyrics_12.ly  lyrics_13.ly  lyrics_14.ly  lyrics_2.ly  lyrics_3.ly  lyrics_4.ly  lyrics_5.ly  (+5 more)
lyrics/: hymn1.txt  hymn10.txt  hymn11.txt  hymn12.txt  hymn13.txt  hymn14.txt  hymn15.txt  hymn16.txt  hymn17.txt  hymn18.txt  hymn19.txt  hymn2.txt  hymn20.txt  hymn21.txt  hymn22.txt  hymn23.txt  hymn24.txt  hymn25.txt  hymn26.txt  hymn27.txt  hymn28.txt  hymn29.txt  hymn3.txt  hymn30.txt  hymn31.txt  hymn32.txt  hymn33.txt  hymn34.txt  hymn35.txt  hymn36.txt  hymn37.txt  hymn38.txt  hymn39.txt  hymn4.txt  hymn40.txt  hymn41.txt  hymn42.txt  hymn43.txt  hymn44.txt  hymn45.txt  (+195 more)
png2ly/: extract_verses.py  png2ly.py  render_ly.py  run_all.py
src/: lyric_check.rs  main.rs  model.rs  preferences.rs  render_ly.rs  rendering.rs  ui.rs  updater.rs  win10.css
templates/: display.html  form.html
(+1828 files in other folders)
