[package]
name = "bop"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_8"] }
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
resvg = "0.45"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
lettre = { version = "0.11", features = ["builder", "rustls-tls", "smtp-transport"] }

[features]
auto-update = []

[build-dependencies]
